# Open_Motion

./: README.md
Android/OpenMotionAndroidExample/app/: build.gradle
Android/OpenMotionAndroidExample/app/src/androidTest/java/fr/cnrs/ipal/openmotionandroidexample/: ApplicationTest.java
Android/OpenMotionAndroidExample/app/src/main/: AndroidManifest.xml
Android/OpenMotionAndroidExample/app/src/main/java/fr/cnrs/ipal/openmotionandroidexample/: IMUListener.java  NativeManager.java  OpenMotionExample.java
Android/OpenMotionAndroidExample/app/src/main/jni/: Android.mk  Application.mk  main_native.c  main_native.h
Android/OpenMotionAndroidExample/app/src/main/res/layout/: activity_open_motion_example.xml
Android/OpenMotionAndroidExample/app/src/main/res/values/: strings.xml
Android/OpenMotionAndroidExample/app/src/main/res/xml/: line_point_formatter_with_label_3.xml  line_point_formatter_with_labels.xml  line_point_formatter_with_labels_2.xml
Android/OpenMotionAndroidExample/app/src/test/java/fr/cnrs/ipal/openmotionandroidexample/: ExampleUnitTest.java
Article/: bmc_article.bib  bmc_article.bib~  bmcart.cls  calibration.tex  conclusion.tex  introduction.tex  main.aux  main.bbl  main.blg  main.synctex.gz(busy)  main.tex  prez_library.tex  state_of_the_art.tex
Article/Smartphone/: bmc_article.bib  bmcart.cls  calibration.tex  conclusion.tex  main.aux
Fusion_Algorithms/C_code/: build.sh  clean.sh  openmotion-uninstalled.pc.in
Fusion_Algorithms/C_code/android-native/jni/: OpenMotion.mk
Fusion_Algorithms/C_code/src/: algebra.c  algebra.h  calibration.c  cmake_install.cmake  geometry.c  om.c  om.h  random.c
Fusion_Algorithms/Classic_algos/: CMakeLists.txt  build.sh  openmotion-uninstalled.pc  openmotion-uninstalled.pc.in
Fusion_Algorithms/Classic_algos/android-native/jni/: Android.mk  Android.mk~  Application.mk  OpenISF.mk~  algebra.c  geometry.c  om.c  random.c
Fusion_Algorithms/Classic_algos/android-native/jni/include/: algebra.h  geometry.h  om.h  random.h
Fusion_Algorithms/Classic_algos/src/: Matrix.cpp  Matrix.h  NonLinearFilter.cpp  NonLinearFilter.h  Quaternion.cpp  Quaternion.h  Vector.cpp  Vector.h  algebra.c  algebra.h  annexes.cpp  annexes.h  cmake_install.cmake~  geometry.c  geometry.cpp  geometry.h  om.c  om.cpp  om.h  random.c  random.cpp  random.h
Fusion_Algorithms/Samples/: Makefile  om_sample.c  utils_.h
Fusion_Algorithms/samples/: om_sample.c~
Matlab/: CompileMex_om.m  omCreateInitParams.m  om_Matlab.c  om_Matlab.h  om_Matlab.m  utils_.c  utils_.h
Matlab/openmotion/: calibration.h  random.h
